src/objects/AcctSeed__Financial_Report_Result__c.object
<CustomObject>
    <description>Used to document the information related to the execution of a financial report definition. The financial report result aggregates information contained in the financial report result value records.</description>
    <fields>
        <fullName>AcctSeed__Accounting_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Start Accounting Period</label>
        <referenceTo>AcctSeed__Accounting_Period__c</referenceTo>
        <relationshipLabel>Financial Statement Results</relationshipLabel>
        <relationshipName>Financial_Report_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Batch_ID__c</fullName>
        <label>Batch ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Budget_Ledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The bu</inlineHelpText>
        <label>Budget Ledger</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Ledger__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Budget</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Ledger__c</referenceTo>
        <relationshipLabel>Financial Statement Results (Budget Ledger)</relationshipLabel>
        <relationshipName>Financial_Statement_Results1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__End_Accounting_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End Accounting  Period</label>
        <referenceTo>AcctSeed__Accounting_Period__c</referenceTo>
        <relationshipLabel>Financial Statement Results (End Accounting  Period)</relationshipLabel>
        <relationshipName>Financial_Statement_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Financial_Report_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Statement Definition</label>
        <referenceTo>AcctSeed__Financial_Report_Definition__c</referenceTo>
        <relationshipLabel>Financial Statement Results</relationshipLabel>
        <relationshipName>Finanncial_Report_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>General Ledger segment used for reporting of a business unit such as division or department.</inlineHelpText>
        <label>GL Variable 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 1</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Financial Statement Results</relationshipLabel>
        <relationshipName>Financial_Statement_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>General Ledger segment used for reporting of a business unit such as division or department.</inlineHelpText>
        <label>GL Variable 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 2</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Financial Statement Results (GL Variable 2)</relationshipLabel>
        <relationshipName>Financial_Statement_Results1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>General Ledger segment used for reporting of a business unit such as division or department.</inlineHelpText>
        <label>GL Variable 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 3</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Financial Statement Results (GL Variable 3)</relationshipLabel>
        <relationshipName>Financial_Statement_Results2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Ledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The transactional ledger used for the report.</inlineHelpText>
        <label>Ledger</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Ledger__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Transactional</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Ledger__c</referenceTo>
        <relationshipLabel>Financial Statement Results</relationshipLabel>
        <relationshipName>Financial_Statement_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Report_Type__c</fullName>
        <label>Report Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Balance Sheet</fullName>
                </value>
                <value>
                    <fullName>Cash Flow Statement</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Ledger Inquiry</fullName>
                </value>
                <value>
                    <fullName>Profit &amp; Loss</fullName>
                </value>
                <value>
                    <fullName>Profit &amp; Loss Versus Budget</fullName>
                </value>
                <value>
                    <fullName>Trial Balance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Run_Finished__c</fullName>
        <label>Run Finished</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Run_Started__c</fullName>
        <label>Run Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stubbed</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Running</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__View_Report__c</fullName>
        <formula>HYPERLINK(&quot;/apex/AcctSeed__ReportViewer?id=&quot; &amp; Id, &quot;View Report&quot;)</formula>
        <label>View Report</label>
        <type>Text</type>
    </fields>
    <label>Financial Statement Result</label>
    <listViews>
        <fullName>AcctSeed__All</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Financial_Report_Definition__c</columns>
        <columns>AcctSeed__Ledger__c</columns>
        <columns>AcctSeed__GL_Account_Variable_1__c</columns>
        <columns>AcctSeed__GL_Account_Variable_2__c</columns>
        <columns>AcctSeed__GL_Account_Variable_3__c</columns>
        <columns>AcctSeed__GL_Account_Variable_4__c</columns>
        <columns>AcctSeed__Report_Type__c</columns>
        <columns>AcctSeed__Run_Finished__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FRR-{00000}</displayFormat>
        <label>Financial Statement Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Statement Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>